# my-music

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
migrations/: 1_schema.sql  2_fix_triggers.sql
mobile/: app.json  index.js  package.json  pnpm-lock.yaml  tsconfig.json
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/app/: +not-found.tsx  _layout.tsx  login.tsx
mobile/app/(tabs)/: _layout.tsx  index.tsx  settings.tsx
mobile/components/: Button.tsx  Collapsible.tsx  ExternalLink.tsx  HapticTab.tsx  HelloWave.tsx  ParallaxScrollView.tsx  ThemedText.tsx  ThemedView.tsx
mobile/components/Playback/: Playback.tsx  Progress.tsx
mobile/components/ui/: IconSymbol.ios.tsx  IconSymbol.tsx  TabBarBackground.ios.tsx
mobile/hooks/: fetcher.ts  maps.ts  storage.ts  useThemeColor.ts
mobile/ios/: Podfile
mobile/ios/mymusic/: Info.plist
mobile/ios/mymusic.xcodeproj/: project.pbxproj
mobile/scripts/: reset-project.js
mobile/types/: Album.ts  S3Config.ts  Tag.ts  User.ts
mobile/utils/: downloads.ts  player.ts  storage.ts
src/: config.rs  error.rs  main.rs  static_files.rs
src/api/: add_song.rs  audio.rs  auth.rs  crud.rs  mod.rs
src/db/: album.rs  artist.rs  mod.rs  song.rs  source.rs  storage_backend.rs  tag.rs  user.rs
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  main.tsx  theme.ts
web/src/api/: index.ts
web/src/components/: Masonry.tsx  Tag.tsx
web/src/components/AddSongModal/: AddSongModal.tsx  index.ts  uploadMusic.ts
web/src/components/Layout/: Header.tsx  (+8 more)
web/src/pages/: Home.tsx  Login.tsx  Settings.tsx
web/src/types/: Artist.ts  FsConfig.ts  Song.ts  Source.ts  StorageBackend.ts  StorageBackendConfig.ts
web/src/utils/: brandColors.ts  date.ts  maps.ts  tags.ts  useAuth.ts
(+18 files in other folders)
