[package]
name = "my-music"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]
resolver = "2"

[workspace.dependencies]
tokio = "1.44.2"
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "io-util", "fs"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum = { version = "0.8.1", features = ["http2", "macros", "ws"] }
color-eyre = "0.6.3"
serde-env = "0.2.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors", "normalize-path"] }
thiserror = "2.0.12"
http = "1.3.1"
http-serde = "2.1.1"
http-body-util = "0.1.3"
tokio-util = { version = "0.7.15", features = ["io-util"] }
tokio-stream = "0.1.17"
mime_guess = "2.0.5"
http-body = "1.0.1"
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio", "sqlite", "derive", "macros", "migrate", "chrono"] }
chrono = { version = "0.4.40", features = ["serde"] }
rss = "2.0.12"
reqwest = { version = "0.12.15", default-features = false, features = ["http2", "rustls-tls", "hickory-dns"] }
ts-rs = { version = "10.1.0", features = ["chrono-impl"] }
itertools = "0.14.0"
axum-extra = { version = "0.10.1", features = ["cookie"] }
scraper = "0.23.1"
futures = "0.3.31"
rustc-hash = "2.1.1"
humantime-serde = "1.1.1"
opendal = { version = "0.53.1", features = ["layers-tracing", "services-fs", "services-s3"] }
argon2 = "0.5.3"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
time = "0.3.39"
symphonia = { version = "0.5.4", features = ["all-formats", "mpa", "opt-simd-neon"] }
headers = "0.4.0"
